[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/Main/sushi/ricePieces/RicePieces.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Main/sushi/ricePieces/rice.png" type="Texture" id=2]

[node name="RicePieces" type="Node2D"]

script = ExtResource( 1 )

[node name="rice1" type="Sprite" parent="." index="0"]

position = Vector2( 3.24298, 4.9977 )
rotation = 1.0472
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="rice2" type="Sprite" parent="." index="1"]

position = Vector2( -0.255604, 0.729752 )
texture = ExtResource( 2 )

[node name="rice3" type="Sprite" parent="." index="2"]

position = Vector2( 0.174408, 1.98945 )
rotation = 2.61799
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="rice4" type="Sprite" parent="." index="3"]

position = Vector2( 0.750435, 4.37523 )
rotation = -1.5516
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="rice5" type="Sprite" parent="." index="4"]

position = Vector2( 4.24074, -2.19888 )
rotation = -1.309
scale = Vector2( 1, 1 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Tween" type="Tween" parent="." index="5"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0


